singapore logos fixed

--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ a {
 
 }
 
-a img {
+a img, img a, img {
   border:0;
 }
 
